--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -6,7 +6,7 @@
     <title>FORTUNE | Quantitative Analyst Terminal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -247,6 +247,6 @@
         </div>
     </div>
 
-    <script src="JavaScriptCode/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
