--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -6,7 +6,7 @@
     <title>FORTUNE | Quantitative Analyst Terminal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
 
@@ -65,15 +65,23 @@
                         <option value="">Loading Clients...</option>
                     </select>
                 </div>
+
                 <div class="quick-stats">
                     <span>CASH: <b style="color:white">$45,200.00</b></span>
                     <span>MARGIN: <b style="color:#f59e0b">USED</b></span>
                 </div>
+
                 <div class="quick-actions">
                     <button class="btn-trade" onclick="openTradeModal('BUY')">BUY</button>
                     <button class="btn-trade sell" onclick="openTradeModal('SELL')">SELL</button>
+
+                    <!-- THEME TOGGLE -->
+                    <button id="themeToggle" class="theme-toggle" title="Toggle Theme">
+                        <i class="fa-solid fa-moon"></i>
+                    </button>
                 </div>
             </div>
+
 
             <section id="dashboard" class="page-view active">
                 <div class="kpi-row">
@@ -247,6 +255,6 @@
         </div>
     </div>
 
-    <script src="JavaScriptCode/app.js"></script>
+    <script src="../JavaScriptCode/app.js"></script>
 </body>
 </html>
