--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -6,7 +6,7 @@
     <title>FORTUNE | Quantitative Analyst Terminal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
 
@@ -213,40 +213,40 @@
         </main>
     </div>
 
-    <div id="tradeModal" class="modal-overlay">
-        <div class="trade-ticket">
-            <div class="ticket-header">
-                <h3 id="modalTitle">NEW ORDER</h3>
-                <span class="close-btn" onclick="closeModal('tradeModal')">&times;</span>
-            </div>
-            <form onsubmit="executeTrade(event)">
-                <div class="input-group">
-                    <label>Asset Symbol</label>
-                    <select id="tradeAsset" required></select>
-                </div>
-                <div class="row">
-                    <div class="input-group"><label>Quantity</label><input type="number" id="tradeQty" required></div>
-                    <div class="input-group"><label>Price</label><input type="number" id="tradePrice" required></div>
-                </div>
-                <button type="submit" class="btn-exec">SUBMIT</button>
-            </form>
+   <div id="tradeModal" class="modal-overlay" style="display: none;">
+    <div class="trade-ticket">
+        <div class="ticket-header">
+            <h3 id="modalTitle">NEW ORDER</h3>
+            <span class="close-btn" onclick="closeModal('tradeModal')">&times;</span>
         </div>
-    </div>
-
-    <div id="wlModal" class="modal-overlay">
-        <div class="trade-ticket" style="width: 300px;">
-            <div class="ticket-header">
-                <h3>Add to Watchlist</h3>
-                <span class="close-btn" onclick="closeModal('wlModal')">&times;</span>
-            </div>
+        <form onsubmit="executeTrade(event)">
             <div class="input-group">
-                <label>Select Asset</label>
-                <select id="wlAssetSelect"></select>
+                <label>Asset Symbol</label>
+                <select id="tradeAsset" required></select>
             </div>
-            <button class="btn-exec" onclick="addToWatchlist()">ADD TO TRACKER</button>
-        </div>
+            <div class="row">
+                <div class="input-group"><label>Quantity</label><input type="number" id="tradeQty" required></div>
+                <div class="input-group"><label>Price</label><input type="number" id="tradePrice" required></div>
+            </div>
+            <button type="submit" class="btn-exec">SUBMIT</button>
+        </form>
     </div>
+</div>
 
-    <script src="app.js"></script>
+<div id="wlModal" class="modal-overlay" style="display: none;">
+    <div class="trade-ticket" style="width: 300px;">
+        <div class="ticket-header">
+            <h3>Add to Watchlist</h3>
+            <span class="close-btn" onclick="closeModal('wlModal')">&times;</span>
+        </div>
+        <div class="input-group">
+            <label>Select Asset</label>
+            <select id="wlAssetSelect"></select>
+        </div>
+        <button class="btn-exec" onclick="addToWatchlist()">ADD TO TRACKER</button>
+    </div>
+</div>
+
+<script src="../JavaScriptCode/app.js"></script>
 </body>
 </html>
