Rebase Whole Repository

--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -118,6 +118,26 @@
                         </div>
                     </div>
                 </div>
+                <div class="chart-grid">
+                    <div class="panel large">
+                        <div class="panel-header"><h3>Monthly Performance</h3></div>
+                        <div class="chart-wrapper">
+                            <canvas id="monthlyChart"></canvas>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-header"><h3>Recent Transactions</h3></div>
+                        <div class="chart-wrapper">
+                            <canvas id="recentTxChart"></canvas>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-header"><h3>Top 5 Holdings</h3></div>
+                        <div class="chart-wrapper">
+                            <canvas id="topHoldingsChart"></canvas>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <section id="holdings" class="page-view">
