--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -10,6 +10,35 @@
     <link rel="stylesheet" href="../Css/style.css">
     <link rel="stylesheet" href="../Css/chatbot.css">
 
+    <style>
+        /* Light theme overrides using CSS variables */
+        :root[data-theme="light"], [data-theme="light"] {
+            --bg-dark: #f7f8fa;
+            --bg-panel: #ffffff;
+            --border: #e5e7eb;
+            --primary: #3b82f6;
+            --accent: #f59e0b;
+            --text-main: #0f172a;
+            --text-muted: #475569;
+            --up: #16a34a;
+            --down: #dc2626;
+        }
+        /* Theme toggle button */
+        .theme-toggle {
+            background: var(--bg-panel);
+            color: var(--text-muted);
+            border: 1px solid var(--border);
+            padding: 8px 10px;
+            border-radius: 6px;
+            cursor: pointer;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            min-width: 36px;
+            min-height: 36px;
+        }
+        .theme-toggle i { color: var(--text-main); }
+    </style>
 </head>
 <body>
 
@@ -75,6 +104,7 @@
                 <div class="quick-actions">
                     <button class="btn-trade" onclick="openTradeModal('BUY')">BUY</button>
                     <button class="btn-trade sell" onclick="openTradeModal('SELL')">SELL</button>
+                    <button id="themeToggleBtn" class="theme-toggle" title="Toggle theme" aria-label="Switch theme" onclick="toggleTheme()"><i class="fa-solid fa-sun"></i></button>
                 </div>
             </div>
 
@@ -270,6 +300,45 @@
         </div>
     </div>
 
+    <!-- Sell Modal -->
+    <div id="sellModal" class="modal-overlay">
+        <div class="trade-ticket" style="max-width: 500px; width: 90%;">
+            <div class="ticket-header">
+                <h3>SELL ORDER</h3>
+                <span class="close-btn" onclick="closeModal('sellModal')">&times;</span>
+            </div>
+            <div class="input-group">
+                <label>Asset</label>
+                <input id="sellAssetLabel" type="text" disabled>
+            </div>
+            <div class="row">
+                <div class="input-group">
+                    <label>Quantity</label>
+                    <input id="sellQty" type="number" disabled>
+                </div>
+                <div class="input-group">
+                    <label>Market Price</label>
+                    <input id="sellMarketPriceDisplay" type="text" value="" disabled>
+                </div>
+            </div>
+            <div class="input-group">
+                <label>Price Mode</label>
+                <div class="row" style="gap:20px; align-items:center;">
+                    <label style="display:flex; gap:8px; align-items:center;">
+                        <input type="radio" name="sellPriceMode" value="market" checked>
+                        <span>Market (<span id="sellMarketPrice">$0.00</span>)</span>
+                    </label>
+                    <label style="display:flex; gap:8px; align-items:center;">
+                        <input type="radio" name="sellPriceMode" value="custom">
+                        <span>Custom</span>
+                        <input id="sellCustomPrice" type="number" step="0.01" placeholder="Enter price" style="width:140px">
+                    </label>
+                </div>
+            </div>
+            <button class="btn-exec" onclick="executeSellFromModal()">EXECUTE SELL</button>
+        </div>
+    </div>
+
     <!-- Asset Detail Modal -->
     <div id="assetModal" class="modal-overlay" style="display:none;">
         <div class="trade-ticket" style="max-width: 900px; width: 90%;">
@@ -332,6 +401,27 @@
 
     <script src="../JavaScriptCode/app.js"></script>
     <script src="../JavaScriptCode/chatbot.js"></script>
+
+    <script>
+        (function() {
+            function applyTheme(theme) {
+                document.documentElement.setAttribute('data-theme', theme);
+                try { localStorage.setItem('theme', theme); } catch(e) {}
+                var btn = document.getElementById('themeToggleBtn');
+                if (btn) {
+                    btn.innerHTML = theme === 'dark' ? '<i class="fa-solid fa-sun"></i>' : '<i class="fa-solid fa-moon"></i>';
+                    btn.setAttribute('aria-label', theme === 'dark' ? 'Switch to light theme' : 'Switch to dark theme');
+                }
+            }
+            window.toggleTheme = function() {
+                var current = document.documentElement.getAttribute('data-theme') || 'dark';
+                applyTheme(current === 'dark' ? 'light' : 'dark');
+            };
+            var saved = 'dark';
+            try { saved = localStorage.getItem('theme') || 'dark'; } catch(e) {}
+            applyTheme(saved);
+        })();
+    </script>
 
 </body>
 </html>
