Each Asset Page Added

--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -98,8 +98,8 @@
                     </select>
                 </div>
                 <div class="quick-stats">
-                    <span>CASH: <b style="color:white">$45,200.00</b></span>
-                    <span>MARGIN: <b style="color:#f59e0b">USED</b></span>
+                    <span>CASH: <b class="stat-cash">$45,200.00</b></span>
+                    <span>MARGIN: <b class="stat-margin">USED</b></span>
                 </div>
                 <div class="quick-actions">
                     <button class="btn-trade" onclick="openTradeModal('BUY')">BUY</button>
