edited index.html for ₹

--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -98,7 +98,7 @@
                     </select>
                 </div>
                 <div class="quick-stats">
-                    <span>CASH: <b class="stat-cash">$45,200.00</b></span>
+                    <span>CASH: <b class="stat-cash">67200₹ </b></span>
                     <span>MARGIN: <b class="stat-margin">USED</b></span>
                 </div>
                 <div class="quick-actions">
@@ -111,22 +111,22 @@
                 <div class="kpi-row">
                     <div class="kpi-card">
                         <span class="kpi-label">Total AUM (Net Worth)</span>
-                        <h2 id="kpiNetWorth">$0.00</h2>
+                        <h2 id="kpiNetWorth">₹0.00</h2>
                         <small class="neutral">Assets Under Management</small>
                     </div>
                     <div class="kpi-card">
                         <span class="kpi-label">Invested Capital</span>
-                        <h2 id="kpiInvested">$0.00</h2>
+                        <h2 id="kpiInvested">₹0.00</h2>
                         <small class="neutral">Cost Basis</small>
                     </div>
                     <div class="kpi-card">
                         <span class="kpi-label">Unrealized P&L</span>
-                        <h2 id="kpiUnrealized">$0.00</h2>
+                        <h2 id="kpiUnrealized">₹0.00</h2>
                         <span class="badge" id="kpiUnrealizedBadge">0.00%</span>
                     </div>
                     <div class="kpi-card" style="border-left: 3px solid #3b82f6;">
                         <span class="kpi-label">Realized Profit (Booked)</span>
-                        <h2 id="kpiRealized">$0.00</h2>
+                        <h2 id="kpiRealized">₹0.00</h2>
                         <small class="neutral">Total Locked Gains</small>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                                     <th>Avg Price</th>
                                     <th>Mkt Price</th>
                                     <th>Mkt Value</th>
-                                    <th>P&L ($)</th>
+                                    <th>P&L (₹)</th>
                                     <th>P&L (%)</th>
                                     <th>Action</th>
                                 </tr>
@@ -357,7 +357,7 @@
                 <div class="row" style="gap:20px; align-items:center;">
                     <label style="display:flex; gap:8px; align-items:center;">
                         <input type="radio" name="sellPriceMode" value="market" checked>
-                        <span>Market (<span id="sellMarketPrice">$0.00</span>)</span>
+                        <span>Market (<span id="sellMarketPrice">₹0.00</span>)</span>
                     </label>
                     <label style="display:flex; gap:8px; align-items:center;">
                         <input type="radio" name="sellPriceMode" value="custom">
@@ -376,7 +376,7 @@
             <div class="ticket-header">
                 <h3 id="assetTitle">ASSET</h3>
                 <div style="display:flex; gap:10px; align-items:center;">
-                    <span id="assetLtp" style="font-weight:bold; color:var(--text-main)">$0.00</span>
+                    <span id="assetLtp" style="font-weight:bold; color:var(--text-main)">₹0.00</span>
                     <span id="assetDelta" class="badge">0.00%</span>
                     <span class="close-btn" onclick="closeAssetDetail()">&times;</span>
                 </div>
@@ -385,21 +385,21 @@
             <div class="kpi-row" style="margin-top:10px;">
                 <div class="kpi-card">
                     <span class="kpi-label">Invested</span>
-                    <h2 id="assetInvested">$0.00</h2>
+                    <h2 id="assetInvested">₹0.00</h2>
                 </div>
                 <div class="kpi-card">
                     <span class="kpi-label">Current</span>
-                    <h2 id="assetCurrent">$0.00</h2>
+                    <h2 id="assetCurrent">₹0.00</h2>
                 </div>
                 <div class="kpi-card">
                     <span class="kpi-label">P&L</span>
-                    <h2 id="assetPnL">$0.00</h2>
+                    <h2 id="assetPnL">₹0.00</h2>
                     <span id="assetPnLPct" class="badge">0.00%</span>
                 </div>
                 <div class="kpi-card">
                     <span class="kpi-label">Qty</span>
                     <h2 id="assetQty">0</h2>
-                    <small class="neutral">Avg: <span id="assetAvgPrice">$0.00</span></small>
+                    <small class="neutral">Avg: <span id="assetAvgPrice">₹0.00</span></small>
                 </div>
                 <div class="kpi-card" style="border-left:3px solid var(--primary);">
                     <span class="kpi-label">Category</span>
