Resolved CSS box pop error

--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -98,7 +98,6 @@
                     </select>
                 </div>
                 <div class="quick-stats">
-                    <span>CASH: <b class="stat-cash">67200₹ </b></span>
                     <span>MARGIN: <b class="stat-margin">USED</b></span>
                 </div>
                 <div class="quick-actions">
@@ -297,7 +296,7 @@
         </main>
     </div>
 
-    <div id="tradeModal" class="modal-overlay">
+    <div id="tradeModal" class="modal-overlay" style="display:none";>
         <div class="trade-ticket">
             <div class="ticket-header">
                 <h3 id="modalTitle">NEW ORDER</h3>
@@ -317,7 +316,7 @@
         </div>
     </div>
 
-    <div id="wlModal" class="modal-overlay">
+    <div id="wlModal" class="modal-overlay" style="display:none;">
         <div class="trade-ticket" style="width: 300px;">
             <div class="ticket-header">
                 <h3>Add to Watchlist</h3>
@@ -332,7 +331,7 @@
     </div>
 
     <!-- Sell Modal -->
-    <div id="sellModal" class="modal-overlay">
+    <div id="sellModal" class="modal-overlay" style="display:none;">
         <div class="trade-ticket" style="max-width: 500px; width: 90%;">
             <div class="ticket-header">
                 <h3>SELL ORDER</h3>
