--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -91,12 +91,11 @@
         <main class="workspace">
             
             <div class="control-bar">
-                <div class="selector-group">
-                    <label>Active Client Account</label>
-                    <select id="globalClientSelect" onchange="loadGlobalContext()">
-                        <option value="">Loading Clients...</option>
-                    </select>
-                </div>
+                <label for="globalClientSelect">Active Client Account</label>
+                <select id="globalClientSelect" onchange="loadGlobalContext()">
+                    <option value="">Loading Clients...</option>
+                </select>
+            </div>
                 <div class="quick-stats">
                     <span>MARGIN: <b class="stat-margin">USED</b></span>
                 </div>
