--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -91,12 +91,14 @@
         <main class="workspace">
             
             <div class="control-bar">
-                <label for="globalClientSelect">Active Client Account</label>
-                <select id="globalClientSelect" onchange="loadGlobalContext()">
-                    <option value="">Loading Clients...</option>
-                </select>
-            </div>
+                <div class="selector-group">
+                    <label for="globalClientSelect">Active Client Account</label>
+                    <select id="globalClientSelect" onchange="loadGlobalContext()">
+                        <option value="">Loading Clients...</option>
+                    </select>
+                </div>
                 <div class="quick-stats">
+                   
                     <span>MARGIN: <b class="stat-margin">USED</b></span>
                 </div>
                 <div class="quick-actions">
@@ -109,22 +111,22 @@
                 <div class="kpi-row">
                     <div class="kpi-card">
                         <span class="kpi-label">Total AUM (Net Worth)</span>
-                        <h2 id="kpiNetWorth">₹0.00</h2>
+                        <h2 id="kpiNetWorth">$0.00</h2>
                         <small class="neutral">Assets Under Management</small>
                     </div>
                     <div class="kpi-card">
                         <span class="kpi-label">Invested Capital</span>
-                        <h2 id="kpiInvested">₹0.00</h2>
+                        <h2 id="kpiInvested">$0.00</h2>
                         <small class="neutral">Cost Basis</small>
                     </div>
                     <div class="kpi-card">
                         <span class="kpi-label">Unrealized P&L</span>
-                        <h2 id="kpiUnrealized">₹0.00</h2>
+                        <h2 id="kpiUnrealized">$0.00</h2>
                         <span class="badge" id="kpiUnrealizedBadge">0.00%</span>
                     </div>
                     <div class="kpi-card" style="border-left: 3px solid #3b82f6;">
                         <span class="kpi-label">Realized Profit (Booked)</span>
-                        <h2 id="kpiRealized">₹0.00</h2>
+                        <h2 id="kpiRealized">$0.00</h2>
                         <small class="neutral">Total Locked Gains</small>
                     </div>
                 </div>
@@ -197,7 +199,7 @@
                                     <th>Avg Price</th>
                                     <th>Mkt Price</th>
                                     <th>Mkt Value</th>
-                                    <th>P&L (₹)</th>
+                                    <th>P&L ($)</th>
                                     <th>P&L (%)</th>
                                     <th>Action</th>
                                 </tr>
@@ -265,11 +267,11 @@
                 <div class="control-bar" style="margin-bottom: 10px;">
                     <div class="row" style="gap: 20px; align-items: flex-end;">
                         <div class="selector-group">
-                            <label>Client A (Benchmark)</label>
+                            <label for="compClient1">Client A (Benchmark)</label>
                             <select id="compClient1"></select>
                         </div>
                         <div class="selector-group">
-                            <label>Client B (Challenger)</label>
+                            <label for="compClient2">Client B (Challenger)</label>
                             <select id="compClient2"></select>
                         </div>
                         <button class="btn-trade" onclick="runComparison()">COMPARE</button>
@@ -295,7 +297,7 @@
         </main>
     </div>
 
-    <div id="tradeModal" class="modal-overlay" style="display:none";>
+    <div id="tradeModal" class="modal-overlay">
         <div class="trade-ticket">
             <div class="ticket-header">
                 <h3 id="modalTitle">NEW ORDER</h3>
@@ -303,26 +305,26 @@
             </div>
             <form onsubmit="executeTrade(event)">
                 <div class="input-group">
-                    <label>Asset Symbol</label>
+                    <label for="tradeAsset">Asset Symbol</label>
                     <select id="tradeAsset" required></select>
                 </div>
                 <div class="row">
-                    <div class="input-group"><label>Quantity</label><input type="number" id="tradeQty" required></div>
-                    <div class="input-group"><label>Price</label><input type="number" id="tradePrice" required></div>
+                    <div class="input-group"><label for="tradeQty">Quantity</label><input type="number" id="tradeQty" required></div>
+                    <div class="input-group"><label for="tradePrice">Price</label><input type="number" id="tradePrice" required></div>
                 </div>
                 <button type="submit" class="btn-exec">SUBMIT</button>
             </form>
         </div>
     </div>
 
-    <div id="wlModal" class="modal-overlay" style="display:none;">
+    <div id="wlModal" class="modal-overlay">
         <div class="trade-ticket" style="width: 300px;">
             <div class="ticket-header">
                 <h3>Add to Watchlist</h3>
                 <span class="close-btn" onclick="closeModal('wlModal')">&times;</span>
             </div>
             <div class="input-group">
-                <label>Select Asset</label>
+                <label for="wlAssetSelect">Select Asset</label>
                 <select id="wlAssetSelect"></select>
             </div>
             <button class="btn-exec" onclick="addToWatchlist()">ADD TO TRACKER</button>
@@ -330,32 +332,32 @@
     </div>
 
     <!-- Sell Modal -->
-    <div id="sellModal" class="modal-overlay" style="display:none;">
+    <div id="sellModal" class="modal-overlay">
         <div class="trade-ticket" style="max-width: 500px; width: 90%;">
             <div class="ticket-header">
                 <h3>SELL ORDER</h3>
                 <span class="close-btn" onclick="closeModal('sellModal')">&times;</span>
             </div>
             <div class="input-group">
-                <label>Asset</label>
+                <label for="sellAssetLabel">Asset</label>
                 <input id="sellAssetLabel" type="text" disabled>
             </div>
             <div class="row">
                 <div class="input-group">
-                    <label>Quantity</label>
+                    <label for="sellQty">Quantity</label>
                     <input id="sellQty" type="number" disabled>
                 </div>
                 <div class="input-group">
-                    <label>Market Price</label>
+                    <label for="sellMarketPriceDisplay">Market Price</label>
                     <input id="sellMarketPriceDisplay" type="text" value="" disabled>
                 </div>
             </div>
             <div class="input-group">
-                <label>Price Mode</label>
+                <label for="sellPriceMode">Price Mode</label>
                 <div class="row" style="gap:20px; align-items:center;">
                     <label style="display:flex; gap:8px; align-items:center;">
                         <input type="radio" name="sellPriceMode" value="market" checked>
-                        <span>Market (<span id="sellMarketPrice">₹0.00</span>)</span>
+                        <span>Market (<span id="sellMarketPrice">$0.00</span>)</span>
                     </label>
                     <label style="display:flex; gap:8px; align-items:center;">
                         <input type="radio" name="sellPriceMode" value="custom">
@@ -374,7 +376,7 @@
             <div class="ticket-header">
                 <h3 id="assetTitle">ASSET</h3>
                 <div style="display:flex; gap:10px; align-items:center;">
-                    <span id="assetLtp" style="font-weight:bold; color:var(--text-main)">₹0.00</span>
+                    <span id="assetLtp" style="font-weight:bold; color:var(--text-main)">$0.00</span>
                     <span id="assetDelta" class="badge">0.00%</span>
                     <span class="close-btn" onclick="closeAssetDetail()">&times;</span>
                 </div>
@@ -383,21 +385,21 @@
             <div class="kpi-row" style="margin-top:10px;">
                 <div class="kpi-card">
                     <span class="kpi-label">Invested</span>
-                    <h2 id="assetInvested">₹0.00</h2>
+                    <h2 id="assetInvested">$0.00</h2>
                 </div>
                 <div class="kpi-card">
                     <span class="kpi-label">Current</span>
-                    <h2 id="assetCurrent">₹0.00</h2>
+                    <h2 id="assetCurrent">$0.00</h2>
                 </div>
                 <div class="kpi-card">
                     <span class="kpi-label">P&L</span>
-                    <h2 id="assetPnL">₹0.00</h2>
+                    <h2 id="assetPnL">$0.00</h2>
                     <span id="assetPnLPct" class="badge">0.00%</span>
                 </div>
                 <div class="kpi-card">
                     <span class="kpi-label">Qty</span>
                     <h2 id="assetQty">0</h2>
-                    <small class="neutral">Avg: <span id="assetAvgPrice">₹0.00</span></small>
+                    <small class="neutral">Avg: <span id="assetAvgPrice">$0.00</span></small>
                 </div>
                 <div class="kpi-card" style="border-left:3px solid var(--primary);">
                     <span class="kpi-label">Category</span>
