Sidebar color changes AND Font size

--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -54,7 +54,7 @@
             </div>
             
             <nav class="nav-menu">
-                <p class="nav-label">PORTFOLIO MGMT</p>
+                <p class="nav-label">PORTFOLIO MANAGEMENT</p>
                 <ul>
                     <li class="active" onclick="switchPage('dashboard')"><i class="fa-solid fa-chart-pie"></i> Dashboard</li>
                     <li onclick="switchPage('holdings')"><i class="fa-solid fa-briefcase"></i> Active Holdings</li>
